# kde

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  generate_docs.sh
data/: 90m10c.lammps  alpha_a1b1c1.lammps  alpha_a5b2c10.lammps  alpha_a5b2c5.lammps  kde.ini
include/: cg_data.h  cg_dump.h  distributions.h  inputs.h  kde.h  lammps_data.h  lammps_dump.h  lmp_data.h  lmp_dump.h  outputs.h  process.h  string_tools.h
lib/: get_fmt.sh
scripts/: plot_average.py  plot_distributions.py
src/: cg_data.cpp  cg_dump.cpp  distributions.cpp  inputs.cpp  kde.cpp  lammps_data.cpp  lammps_dump.cpp  lmp_data.cpp  lmp_dump.cpp  main.cpp  outputs.cpp  process.cpp
